--- a/index.html
+++ b/index.html
@@ -1,39 +1,9 @@
-<p><strong>Maximizing the content of the library</strong>. You may not find a funded proposal for the same program you are interested in. However, the content here&nbsp;may be useful.</p>
-<ol>
-<li>Analyze how arguments are made to particular funders. Also, look at how proposals for various mechanisms and funding levels differ.</li>
-<li>Is there information that you can draw from proposals of similar type (e.g. same discipline, activity, type of funder)?</li>
-<li>Look at several types of proposals and determine if you can adopt &ldquo;workable&rdquo; elements: organization, phrasing, graphics, use of formatting and style, etc.</li>
-<li>Some proposals include cover letters, collaborators&rsquo; letters, institutional commitment letters, and mentors&rsquo; letters. Use these for guidance.</li>
-<li><span>Given limited space,</span> consider how these PIs synthesized information. Compare that to sections that needed more detail. Notice where the focus and energy of the narrative is placed, and what is emphasized.</li>
-<li>Funders ask for specific aims, goals and objectives, hypotheses, etc. Analyze how these are formulated and developed.</li>
-<li>Is there anything that would not work for your discipline, narrative, or funder?</li>
-<li>Can any of these investigators serve as resources, mentors or collaborators?</li>
-</ol>
-<p><strong>Updates to the library</strong>. We are working to expand the numbers and types of proposals available as examples. The library is usually updated once per year. If there is a particular proposal you would like an example of, <span>please <a href="https://docs.google.com/forms/d/e/1FAIpQLSd0EUqgxL5MaNj2LKHznzyrB1De4LE3ZiaVPJCm4S5VaVoscw/viewform?usp=sf_link">submit a request</a>.</span>&nbsp;</p>
-<p>&nbsp;</p>
-
-<div class="toggle_list" id="panel6"><strong>Federal Resources</strong>
-<ul>
-<li><strong>Department of Education</strong>: <a href="https://www.ed.gov/about/ed-overview/required-notices/freedom-of-information-act-foia/foia-e-reading-room" target="_blank" rel="noopener">FOIA e-Reading Room</a> has numerous grant applications funded by the Office of the Chief Financial Officer, Office of Innovation and Improvement, Institute of Education Sciences, and others.</li>
-<li><strong>National Institutes of Health Grants</strong>
-<ul>
-<li>Guidance on <a href="https://grants.nih.gov/grants/forms.htm" target="_blank" rel="noopener">various NIH grant components</a><span>, from NIH</span></li>
-<li><span><a href="https://grants.nih.gov/grants-process/write-application/samples-applications-and-documents" target="_blank" rel="noopener">Sample applications, attachments, and other documents</a> from NIH</span></li>
-<li><span><a href="https://www.niaid.nih.gov/grants-contracts/sample-applications" target="_blank" rel="noopener">Sample applications and summary statements</a> from the National Institute of Allergy and Infectious Disease, NIH</span></li>
-</ul>
-</li>
-<li><strong>National Endowment for the Humanities</strong>: <a href="http://www.neh.gov/about/foia/freedom-information-act-sample-grant-application-narratives" target="_blank" rel="noopener">Sample grant application narratives</a></li>
-<li><strong>National Endowment for the Arts</strong>: <a href="https://www.arts.gov/about/foia/library" target="_blank" rel="noopener">Sample narratives of funded grants</a></li>
-<li><strong>Institute of Museum and Library Services</strong>: <a href="http://www.imls.gov/applicants/sample_applications.aspx" target="_blank" rel="noopener">Sample grant applications for various programs</a></li>
-</ul>
-</div>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VCU Funded Proposal Library</title>
+  <title>Funded Proposal Library</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css" />
@@ -41,16 +11,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --vcu-black: #000000;
-      --vcu-white: #FFFFFF;
-      --vcu-gold: #FFB300;
-      --vcu-light-gray: #F5F5F5;
-      --vcu-dark-gray: #333333;
+      --black: #000000;
+      --white: #FFFFFF;
+      --gold: #FFB300;
+      --light-gray: #F5F5F5;
+      --dark-gray: #333333;
     }
     body {
       font-family: 'Open Sans', sans-serif;
-      background-color: var(--vcu-white);
-      color: var(--vcu-black);
+      background-color: var(--white);
+      color: var(--black);
       margin: 0;
       padding: 0;
       line-height: 1.6;
@@ -60,42 +30,21 @@
       margin: 0 auto;
       padding: 20px;
     }
-    .vcu-header {
-      background-color: var(--vcu-black);
-      color: var(--vcu-white);
-      padding: 25px 0;
-      margin-bottom: 30px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    }
-    .header-content {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .header-title {
-      margin: 0;
-      font-size: 2.2rem;
-      font-weight: 700;
-    }
-    .vcu-logo {
-      height: 50px;
-      width: auto;
-    }
     .filters-panel {
-      background-color: var(--vcu-white);
+      background-color: var(--white);
       border: 1px solid #e0e0e0;
       padding: 25px;
       border-radius: 8px;
       margin-bottom: 30px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      border-top: 4px solid var(--vcu-gold);
+      border-top: 4px solid var(--gold);
     }
     .filters-title {
-      color: var(--vcu-black);
+      color: var(--black);
       font-size: 1.3rem;
       margin-bottom: 20px;
       padding-bottom: 10px;
-      border-bottom: 2px solid var(--vcu-gold);
+      border-bottom: 2px solid var(--gold);
       display: inline-block;
     }
     .filter-grid {
@@ -109,7 +58,7 @@
     }
     .filter-group label {
       font-weight: 600;
-      color: var(--vcu-black);
+      color: var(--black);
       margin-bottom: 8px;
       font-size: 0.95rem;
     }
@@ -117,25 +66,25 @@
       padding: 10px 15px;
       border: 1px solid #ddd;
       border-radius: 6px;
-      background-color: var(--vcu-white);
-      color: var(--vcu-black);
+      background-color: var(--white);
+      color: var(--black);
       font-size: 0.95rem;
     }
     .table-panel {
-      background-color: var(--vcu-white);
+      background-color: var(--white);
       border: 1px solid #e0e0e0;
       border-radius: 8px;
       padding: 20px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
       margin-bottom: 30px;
-      border-top: 4px solid var(--vcu-gold);
+      border-top: 4px solid var(--gold);
     }
     #filtered-table {
       width: 100% !important;
     }
     #filtered-table th {
-      background-color: var(--vcu-black);
-      color: var(--vcu-white);
+      background-color: var(--black);
+      color: var(--white);
       padding: 12px 15px;
       font-weight: 600;
     }
@@ -145,26 +94,11 @@
       vertical-align: top;
     }
     #filtered-table tr:nth-child(even) {
-      background-color: var(--vcu-light-gray);
-    }
-    .vcu-footer {
-      background-color: var(--vcu-black);
-      color: var(--vcu-white);
-      padding: 20px 0;
-      text-align: center;
-      font-size: 0.9rem;
-      margin-top: 40px;
+      background-color: var(--light-gray);
     }
   </style>
 </head>
 <body>
-  <div class="vcu-header">
-    <div class="container header-content">
-      <h1 class="header-title">VCU Funded Proposal Library</h1>
-      <div class="vcu-logo-placeholder" style="color: var(--vcu-gold); font-weight: bold; font-size: 1.5rem;">VCU</div>
-    </div>
-  </div>
-
   <div class="container">
     <div class="filters-panel">
       <h2 class="filters-title">Filter Projects</h2>
@@ -201,13 +135,6 @@
         <thead></thead>
         <tbody></tbody>
       </table>
-    </div>
-  </div>
-
-  <div class="vcu-footer">
-    <div class="container footer-content">
-      <div>Virginia Commonwealth University Research Projects</div>
-      <div class="footer-logo-placeholder" style="color: var(--vcu-gold); font-weight: bold;">VCU</div>
     </div>
   </div>
 
@@ -290,10 +217,6 @@
         alert("Failed to load data file.");
       }
     });
-  </script>
-</body>
-</html>
-
   </script>
 </body>
 </html>
