--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -17,27 +17,33 @@
       --light-gray: #F5F5F5;
       --dark-gray: #333333;
     }
-    body {
+
+    html, body {
+      height: auto;
+      min-height: 100%;
+      margin: 0;
+      padding: 0;
       font-family: 'Open Sans', sans-serif;
       background-color: var(--white);
       color: var(--black);
-      margin: 0;
-      padding: 0;
       line-height: 1.6;
     }
+
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 20px;
+      padding: 20px 20px 0 20px; /* remove bottom padding */
     }
-    .filters-panel {
+
+    .filters-panel, .table-panel {
       background-color: var(--white);
+      border: none; /* remove all borders */
+      border-radius: 0; /* remove rounded corners */
       padding: 25px;
-      border-radius: 8px;
+      box-shadow: none; /* remove shadows */
       margin-bottom: 30px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      border-top: 4px solid var(--gold);
     }
+
     .filters-title {
       color: var(--black);
       font-size: 1.3rem;
@@ -46,21 +52,25 @@
       border-bottom: 2px solid var(--gold);
       display: inline-block;
     }
+
     .filter-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
     }
+
     .filter-group {
       display: flex;
       flex-direction: column;
     }
+
     .filter-group label {
       font-weight: 600;
       color: var(--black);
       margin-bottom: 8px;
       font-size: 0.95rem;
     }
+
     .filter-group select {
       padding: 10px 15px;
       border: 1px solid #ddd;
@@ -69,28 +79,24 @@
       color: var(--black);
       font-size: 0.95rem;
     }
-    .table-panel {
-      background-color: var(--white);
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      margin-bottom: 30px;
-      border-top: 4px solid var(--gold);
-    }
+
     #filtered-table {
       width: 100% !important;
     }
+
     #filtered-table th {
       background-color: var(--black);
       color: var(--white);
       padding: 12px 15px;
       font-weight: 600;
     }
+
     #filtered-table td {
       padding: 12px 15px;
       border-bottom: 1px solid #eee;
       vertical-align: top;
     }
+
     #filtered-table tr:nth-child(even) {
       background-color: var(--light-gray);
     }
